i#1601 Added unit tests for drstrace.
Added unit tests for drstrace.c. Covered the following routines:
1) print_unicode_string
2) print_simple_value
3) drstrace_print_enum_const_name
4) drstrace_get_arg_symname (for enum_consts case)
5) print_arg
6) drsys_iter_arg_cb

R=bruening@google.com
BUG=1601

Review URL: https://codereview.appspot.com/122870043

SVN-Revision: 2015

--- a/drstrace/CMakeLists.txt
+++ b/drstrace/CMakeLists.txt
@@ -111,6 +111,23 @@ install(TARGETS drstrace DESTINATION "${INSTALL_BIN}"
   WORLD_READ WORLD_EXECUTE)
 
 ##################################################
+# drstrace unit tests build
+
+if (WIN32)
+  add_executable(drstrace_unit_tests ${srcs} drstrace_unit_tests.c)
+
+  set_property(TARGET drstrace_unit_tests PROPERTY COMPILE_DEFINITIONS
+               "${DEFINES_NO_D};DRSTRACE_UNIT_TESTS")
+  configure_DynamoRIO_standalone(drstrace_unit_tests)
+  use_DynamoRIO_extension(drstrace_unit_tests drsyscall_static)
+  use_DynamoRIO_extension(drstrace_unit_tests drx_static)
+  use_DynamoRIO_extension(drstrace_unit_tests drsyms_static)
+  add_dependencies(drstrace_unit_tests drsyscall)
+  add_test(drstrace_unit_tests
+           "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/drstrace_unit_tests")
+endif (WIN32)
+
+##################################################
 # drstrace test
 
 if (BUILD_TOOL_TESTS)
