Combined-packaged documentation:
Adds a prefix to each installation section in the docs that talks about
this package already containing a local install.

SVN-Revision: 2025

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -118,6 +118,7 @@ add_custom_command(
        -Ddoxygen_ver=${DOXYGEN_VERSION}
        -DDynamoRIO_DIR=${DynamoRIO_DIR}
        -DTOOL_DR_MEMORY=${TOOL_DR_MEMORY}
+       -DPACKAGED_WITH_DYNAMORIO=${BUILDING_SUB_PACKAGE}
        -P ${CMAKE_CURRENT_SOURCE_DIR}/CMake_doxyfile.cmake
   VERBATIM # recommended: p260
   )
