--- a/drsyscall/CMakeLists.txt
+++ b/drsyscall/CMakeLists.txt
@@ -125,7 +125,7 @@ set(PREFERRED_BASE 0x77000000)
 configure_DynamoRIO_client(drsyscall)
 use_DynamoRIO_extension(drsyscall drmgr)
 use_DynamoRIO_extension(drsyscall drcontainers)
-set_target_properties(drsyscall PROPERTIES VERSION ${DRMF_VERSION})
+set_target_properties(drsyscall PROPERTIES VERSION ${DRMF_VERSION_MAJOR_MINOR})
 configure_drsyscall_target(drsyscall)
 export_drsyscall_target(drsyscall "drmgr")
 install(FILES drsyscall.h DESTINATION ${DRMF_INSTALL_INC})
