Adds the first DRMF sample, "strace".  It uses drsyscall to print the name and result of each system call executed by the app.
Adds infrastructure for DRMF samples:
+ Installs them as binaries and source into drmf/samples/
+ Exports a version of our own CMakeLists.txt for users to use building
  these samples
+ Adds a test "strace_sample"

The sample uses .drpath for Windows and DynamoRIO_add_rel_rpaths for Linux
for a standalone package, but nothing (since nothing is needed) for a
combined package.

SVN-Revision: 2033

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1671,6 +1671,8 @@ if (TOOL_DR_MEMORY AND WIN32)
   add_subdirectory(drstrace)
 endif (TOOL_DR_MEMORY AND WIN32)
 
+add_subdirectory(framework/samples)
+
 ###########################################################################
 # installation
 
