--- a/make/resources.rc
+++ b/make/resources.rc
@@ -96,6 +96,10 @@
 # define FILE_NAME "umbra.dll"
 # define FILE_DESCRIPTION "Shadow memory translator"
 # define FILE_TYPE VFT_DLL
+#elif defined(RC_IS_VS_EXTERNAL_TOOL)
+# define FILE_NAME "vs_external_tool.exe"
+# define FILE_DESCRIPTION "External Tool installer"
+# define FILE_TYPE VFT_APP
 #else
 # error must define an RC_IS_xxx define
 #endif
