--- a/drstrace/CMakeLists.txt
+++ b/drstrace/CMakeLists.txt
@@ -133,8 +133,9 @@ configure_DynamoRIO_standalone(drstrace)
 target_link_libraries(drstrace drinjectlib drconfiglib drfrontendlib)
 set_target_properties(drstrace PROPERTIES VERSION ${DRMF_VERSION})
 if (WIN32)
+  get_filename_component(symfetch_name ${symfetch_path} NAME)
   set_property(TARGET drstrace PROPERTY COMPILE_DEFINITIONS
-    ${DEFINES_NO_D} RC_IS_DRSTRACE SYMBOL_DLL_PATH="${symfetch_path}")
+    ${DEFINES_NO_D} RC_IS_DRSTRACE SYMBOL_DLL_NAME="${symfetch_name}")
 else ()
   set_property(TARGET drstrace PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
 endif ()
@@ -150,7 +151,8 @@ if (WIN32)
   add_executable(drstrace_unit_tests ${srcs} drstrace_unit_tests.c)
 
   set_property(TARGET drstrace_unit_tests PROPERTY COMPILE_DEFINITIONS
-               ${DEFINES_NO_D} DRSTRACE_UNIT_TESTS SYMBOL_DLL_PATH="${symfetch_path}")
+    # We pass the absolute build dir path here as unit tests never move
+    ${DEFINES_NO_D} DRSTRACE_UNIT_TESTS SYMBOL_DLL_PATH="${symfetch_path}")
   configure_DynamoRIO_standalone(drstrace_unit_tests)
   use_DynamoRIO_extension(drstrace_unit_tests drsyscall_static)
   use_DynamoRIO_extension(drstrace_unit_tests drx_static)
