i#111: port non-inline-asm tests to 64-bit
Ports asmtest, bitfield, pthreads, realloc, and unloadtest to 64-bit.

Enables a few more tests for 64-bit, running in the new no-uninit default.
We can't enable all due to .res differences and other problems: we'll fait
for full mode.

SVN-Revision: 2096

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -279,6 +279,7 @@ if (CMAKE_C_SIZEOF_DATA_PTR EQUAL 8 OR CMAKE_CXX_SIZEOF_DATA_PTR EQUAL 8)
   set(X64 ON)
   set(LIB_ARCH "lib64")
   set(BIN_ARCH "bin64")
+  set(DEFINES ${DEFINES} -DX64)
 else()
   set(X64 OFF)
   set(LIB_ARCH "lib32")
