--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1052,15 +1052,12 @@ if (NOT USE_DRSYMS)
   set(scripts ${scripts} postprocess.pl)
 endif (NOT USE_DRSYMS)
 
-if (USE_DRSYMS)
-  # front-end needs to be named ${toolname}.exe and thus has ${toolsname}.pdb, so
+if (USE_DRSYMS AND TOOL_DR_MEMORY)
+  # front-end needs to be named drmemory.exe and thus has drmemory.pdb, so
   # we rename client lib (plus cmake best w/o same-name targets)
   set(client_target "${toolname}lib")
-  if (TOOL_DR_MEMORY)
-    set(frontend_srcs drmemory/frontend.c drmemory/options.c)
-  else (TOOL_DR_MEMORY)
-    set(frontend_srcs drheapstat/drheapstat_frontend.c)
-  endif (TOOL_DR_MEMORY)
+  # assuming only DrMem for now
+  set(frontend_srcs drmemory/frontend.c drmemory/options.c)
   if (WIN32)
     set(frontend_srcs ${frontend_srcs} make/resources.rc)
   endif ()
@@ -1068,9 +1065,9 @@ if (USE_DRSYMS)
   if (WIN32)
     target_link_libraries(${toolname} dbghelp)
   endif (WIN32)
-else (USE_DRSYMS)
+else (USE_DRSYMS AND TOOL_DR_MEMORY)
   set(client_target ${toolname})
-endif (USE_DRSYMS)
+endif (USE_DRSYMS AND TOOL_DR_MEMORY)
 
 add_library(${client_target} SHARED ${srcs})
 set_target_properties(${client_target} PROPERTIES
@@ -1166,7 +1163,7 @@ if (WIN32)
   set_target_properties(${client_target} PROPERTIES
     LINK_FLAGS "${cur_flags} ${new_flags}")
 endif (WIN32)
-if (USE_DRSYMS)
+if (USE_DRSYMS AND TOOL_DR_MEMORY)
   if (DEFINED DynamoRIO_RPATH)
     set(old_rpath ${DynamoRIO_RPATH})
   else ()
@@ -1185,6 +1182,8 @@ if (USE_DRSYMS)
     DynamoRIO_add_rel_rpaths(${toolname} drconfiglib)
     set_property(TARGET ${toolname} PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
   endif (WIN32)
+endif (USE_DRSYMS AND TOOL_DR_MEMORY)
+if (USE_DRSYMS)
   if (STATIC_DRSYMS)
     use_DynamoRIO_extension(${client_target} drsyms_static)
   else ()
@@ -1216,8 +1215,10 @@ if (WIN32)
     endif ()
   endif ()
 
-  # Front-end uses dbghelp routines not in VS2005 so we link w/ DR's import lib.
-  target_link_libraries(${toolname} ${dbghelp_lib})
+  if (TOOL_DR_MEMORY)
+    # Front-end uses dbghelp routines not in VS2005 so we link w/ DR's import lib.
+    target_link_libraries(${toolname} ${dbghelp_lib})
+  endif ()
 
   # we have to link with ntdll AFTER any libcmt.lib from configure_DynamoRIO_client
   # or use_DynamoRIO_extension (w/ static libs)
@@ -1332,10 +1333,10 @@ endif (PERL_TO_EXE)
 file(MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/logs")
 file(MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/logs/codecache")
 file(MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/logs/dynamorio")
-if (NOT PERL_TO_EXE AND NOT USE_DRSYMS)
+if (NOT PERL_TO_EXE AND TOOL_DR_HEAPSTAT OR NOT USE_DRSYMS)
   configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${tooldir}/${toolname}.pl"
     "${PROJECT_BINARY_DIR}/${BUILD_BIN}/${toolname}.pl" @ONLY)
-  if (NOT USE_DRSYMS)
+  if (NOT USE_DRSYMS OR TOOL_DR_HEAPSTAT)
     configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${tooldir}/postprocess.pl"
       "${PROJECT_BINARY_DIR}/${BUILD_BIN}/postprocess.pl" COPYONLY)
     set(script_aux "${CMAKE_CURRENT_SOURCE_DIR}/${tooldir}/postprocess.pl")
@@ -1358,20 +1359,18 @@ if (WIN32)
       "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfiglib.dll" COPYONLY)
     configure_file("${DynamoRIO_DIR}/../${LIB_ARCH}/drinjectlib.dll"
       "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drinjectlib.dll" COPYONLY)
-    if (USE_DRSYMS)
+    if (USE_DRSYMS AND TOOL_DR_MEMORY)
       configure_file("${DynamoRIO_DIR}/../${BIN_ARCH}/drconfig.exe"
         "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfig.exe" COPYONLY)
-      if (NOT STATIC_DRSYMS AND TOOL_DR_MEMORY)
+      if (NOT STATIC_DRSYMS)
         # symquery needs drsyms.dll in same dir
         configure_file("${DynamoRIO_DIR}/../ext/${LIB_ARCH}/${build_type}/drsyms.dll"
           "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drsyms.dll" COPYONLY)
-      endif (NOT STATIC_DRSYMS AND TOOL_DR_MEMORY)
+      endif (NOT STATIC_DRSYMS)
       # symquery needs dynamorio.dll in same dir
-      if (TOOL_DR_MEMORY)
-        configure_file("${DynamoRIO_DIR}/../${LIB_ARCH}/${build_type}/dynamorio.dll"
-          "${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll" COPYONLY)
-      endif (TOOL_DR_MEMORY)
-    endif (USE_DRSYMS)
+      configure_file("${DynamoRIO_DIR}/../${LIB_ARCH}/${build_type}/dynamorio.dll"
+        "${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll" COPYONLY)
+    endif (USE_DRSYMS AND TOOL_DR_MEMORY)
   else (USER_SPECIFIED_DynamoRIO_DIR)
     # XXX: I can't get "TARGET drconfiglib POST_BUILD" to work, maybe b/c
     # the target is in a subdir?
@@ -1387,14 +1386,14 @@ if (WIN32)
       COMMAND ${CMAKE_COMMAND}
       ARGS -E copy "${DynamoRIO_DIR}/../${LIB_ARCH}/drinjectlib.dll"
       "${drinjectlib_copy}" VERBATIM)
-    if (USE_DRSYMS)
+    if (USE_DRSYMS AND TOOL_DR_MEMORY)
       set(drconfigexe_copy "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfig.exe")
       add_custom_target(drconfigexe_copy_tgt ALL DEPENDS "${drconfigexe_copy}")
       add_custom_command(OUTPUT "${drconfigexe_copy}" DEPENDS drconfig
         COMMAND ${CMAKE_COMMAND}
         ARGS -E copy "${DynamoRIO_DIR}/../${BIN_ARCH}/drconfig.exe"
         "${drconfigexe_copy}" VERBATIM)
-      if (NOT STATIC_DRSYMS AND TOOL_DR_MEMORY)
+      if (NOT STATIC_DRSYMS)
         # symquery needs drsyms.dll in same dir
         set(drsymsdll_copy "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drsyms.dll")
         add_custom_target(drsymsdll_copy_tgt ALL DEPENDS "${drsymsdll_copy}")
@@ -1402,17 +1401,15 @@ if (WIN32)
           COMMAND ${CMAKE_COMMAND}
           ARGS -E copy "${DynamoRIO_DIR}/../ext/${LIB_ARCH}/${build_type}/drsyms.dll"
         "${drsymsdll_copy}" VERBATIM)
-      endif (NOT STATIC_DRSYMS AND TOOL_DR_MEMORY)
+      endif (NOT STATIC_DRSYMS)
       # symquery needs dynamorio.dll in same dir
-      if (TOOL_DR_MEMORY)
-        set(drdll_copy "${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll")
-        add_custom_target(drdll_copy_tgt ALL DEPENDS "${drdll_copy}")
-        add_custom_command(OUTPUT "${drdll_copy}" DEPENDS dynamorio
-          COMMAND ${CMAKE_COMMAND}
-          ARGS -E copy "${DynamoRIO_DIR}/../${LIB_ARCH}/${build_type}/dynamorio.dll"
-          "${drdll_copy}" VERBATIM)
-      endif (TOOL_DR_MEMORY)
-    endif (USE_DRSYMS)
+      set(drdll_copy "${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll")
+      add_custom_target(drdll_copy_tgt ALL DEPENDS "${drdll_copy}")
+      add_custom_command(OUTPUT "${drdll_copy}" DEPENDS dynamorio
+        COMMAND ${CMAKE_COMMAND}
+        ARGS -E copy "${DynamoRIO_DIR}/../${LIB_ARCH}/${build_type}/dynamorio.dll"
+        "${drdll_copy}" VERBATIM)
+    endif (USE_DRSYMS AND TOOL_DR_MEMORY)
   endif (USER_SPECIFIED_DynamoRIO_DIR)
   if (USE_DRSYMS)
     # above copy is for winsyms and symquery, this is for drmemorylib
@@ -1726,7 +1723,7 @@ if (WIN32)
       PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
       WORLD_READ WORLD_EXECUTE)
   endif (USE_DRSYMS)
-  if (USE_DRSYMS)
+  if (USE_DRSYMS AND TOOL_DR_MEMORY)
     install(FILES
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfiglib.dll
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drinjectlib.dll
@@ -1736,7 +1733,7 @@ if (WIN32)
       DESTINATION "${INSTALL_BIN}"
       PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
       WORLD_READ WORLD_EXECUTE)
-  endif (USE_DRSYMS)
+  endif (USE_DRSYMS AND TOOL_DR_MEMORY)
   install(FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/README
     DESTINATION "${INSTALL_PREFIX}."
@@ -1749,17 +1746,17 @@ endif (WIN32)
 install(FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/license.txt
   DESTINATION "${INSTALL_PREFIX}.")
-if (USE_DRSYMS)
+if (USE_DRSYMS AND TOOL_DR_MEMORY)
   install_if_32bit(TARGETS ${toolname} DESTINATION "${INSTALL_BIN}"
     PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
-else (USE_DRSYMS)
+else (USE_DRSYMS AND TOOL_DR_MEMORY)
   install_if_32bit(FILES
     ${script_main}
     DESTINATION "${INSTALL_BIN}"
     PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
-endif (USE_DRSYMS)
+endif (USE_DRSYMS AND TOOL_DR_MEMORY)
 # We put "helper" files inside ${BIN_ARCH}/ so only top-level script is visible
 if (NOT "${script_aux}" STREQUAL "")
   install_if_32bit(FILES
